Update meta data

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -41,7 +41,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>React App</title>
+    <title>REST Countries API with color theme switcher</title>
   </head>
   <body>
     <noscript
